--- a/angular4/src/app/dashboard/dashboard.component.html
+++ b/angular4/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,39 @@
-<h1>{{ title }}</h1>
+<section class="content-header">
+    <h1>{{ title }}<small>Versão 1.0</small></h1>
+</section>
+
+<section class="content">
+    <div class="col-xs-4">
+        <div class="small-box bg-green">
+            <div class="inner">
+                <h3>R$ 10,00</h3>
+                <p>Total de Créditos</p>
+            </div>
+            <div class="icon">
+                <i class="fa fa-bank"></i>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-4">
+        <div class="small-box bg-red">
+            <div class="inner">
+                <h3>R$ 10,00</h3>
+                <p>Total de Débitos</p>
+            </div>
+            <div class="icon">
+                <i class="fa fa-credit-card"></i>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-4">
+        <div class="small-box bg-blue">
+            <div class="inner">
+                <h3>R$ 10,00</h3>
+                <p>Saldo</p>
+            </div>
+            <div class="icon">
+                <i class="fa fa-money"></i>
+            </div>
+        </div>
+    </div>
+</section>
