--- a/angular4/src/app/dashboard/dashboard.component.html
+++ b/angular4/src/app/dashboard/dashboard.component.html
@@ -1,39 +1,7 @@
-<section class="content-header">
-    <h1>{{ title }}<small>Versão 1.0</small></h1>
-</section>
+<use-content-header title="Dashboard" subtitle="Versão 1.0"></use-content-header>
 
 <section class="content">
-    <div class="col-xs-4">
-        <div class="small-box bg-green">
-            <div class="inner">
-                <h3>R$ 10,00</h3>
-                <p>Total de Créditos</p>
-            </div>
-            <div class="icon">
-                <i class="fa fa-bank"></i>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-4">
-        <div class="small-box bg-red">
-            <div class="inner">
-                <h3>R$ 10,00</h3>
-                <p>Total de Débitos</p>
-            </div>
-            <div class="icon">
-                <i class="fa fa-credit-card"></i>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-4">
-        <div class="small-box bg-blue">
-            <div class="inner">
-                <h3>R$ 10,00</h3>
-                <p>Saldo</p>
-            </div>
-            <div class="icon">
-                <i class="fa fa-money"></i>
-            </div>
-        </div>
-    </div>
+    <use-value-box grid="4" colorClass="bg-green" value="{{ credit | currency : 'BRL' : true }}" text="Total de Créditos" iconClass="fa-bank"></use-value-box>
+    <use-value-box grid="4" colorClass="bg-red" value="{{ debt | currency : 'BRL' : true }}" text="Total de Débitos" iconClass="fa-credit-card"></use-value-box>
+    <use-value-box grid="4" colorClass="bg-blue" value="{{ total | currency : 'BRL' : true }}" text="Saldo" iconClass="fa-money"></use-value-box>
 </section>
