--- a/angular4/src/app/dashboard/dashboard.component.html
+++ b/angular4/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <use-content-header title="Dashboard" subtitle="Versão 1.0"></use-content-header>
 
 <section class="content">
-    <use-value-box grid="4" colorClass="bg-green" value="{{ credit | currency : 'BRL' : true }}" text="Total de Créditos" iconClass="fa-bank"></use-value-box>
-    <use-value-box grid="4" colorClass="bg-red" value="{{ debt | currency : 'BRL' : true }}" text="Total de Débitos" iconClass="fa-credit-card"></use-value-box>
-    <use-value-box grid="4" colorClass="bg-blue" value="{{ total | currency : 'BRL' : true }}" text="Saldo" iconClass="fa-money"></use-value-box>
+    <use-value-box grid="12 4" colorClass="bg-green" value="{{ credit | currency : 'BRL' : true }}" text="Total de Créditos" iconClass="fa-bank"></use-value-box>
+    <use-value-box grid="12 4" colorClass="bg-red" value="{{ debt | currency : 'BRL' : true }}" text="Total de Débitos" iconClass="fa-credit-card"></use-value-box>
+    <use-value-box grid="12 4" colorClass="bg-blue" value="{{ total | currency : 'BRL' : true }}" text="Saldo" iconClass="fa-money"></use-value-box>
 </section>
