--- a/angular4/src/app/billingCycle/billingCycleForm/bcForm.component.html
+++ b/angular4/src/app/billingCycle/billingCycleForm/bcForm.component.html
@@ -1,11 +1,13 @@
 <div role="form">
     <div class="box-body">
-        <use-field name="name" type="text" label="Nome" ph="Informe o nome" grid="12 4"></use-field>
+        <use-field name="name" type="text" label="Nome" ph="Informe o nome" grid="12 8 4"></use-field>
+        <use-field name="month" type="number" label="Mês" ph="Informe o mês" grid="12 8 4"></use-field>
+        <use-field name="year" type="number" label="Ano" ph="Informe o ano" grid="12 8 4"></use-field>
     </div>
     <div class="box-footer">
-        <button class="btn btn-primary">Incluir</button>
-        <button class="btn btn-info">Alterar</button>
-        <button class="btn btn-danger">Excluir</button>
+        <button (click)="create()" class="btn btn-primary">Incluir</button>
+        <button (click)="update()" class="btn btn-info">Alterar</button>
+        <button (click)="delete()" class="btn btn-danger">Excluir</button>
         <button class="btn btn-default">Cancelar</button>
     </div>
 </div>
