--- a/angular4/src/app/billingCycle/billingCycle.component.html
+++ b/angular4/src/app/billingCycle/billingCycle.component.html
@@ -29,27 +29,7 @@
         <!-- Conteúdo das tabs -->
         <div class="tab-content">
             <div class="tab-pane" id="tabList">
-                <ul>
-                    <li *ngFor="let bc of billingCycle">
-                        {{ bc.name }}
-                        <ul *ngFor="let credit of bc.credits">
-                            <li>
-                                {{ credit.name }}
-                            </li>
-                            <li>
-                                {{ credit.value }}
-                            </li>
-                        </ul>
-                        <ul *ngFor="let debt of bc.debts">
-                            <li>
-                                {{ debt.name }}
-                            </li>
-                            <li>
-                                {{ debt.value }}
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                <bc-list></bc-list>
             </div>
             <div class="tab-pane" id="tabCreate">
                 <bc-form></bc-form>
