Adicionando o service de tabs

--- a/angular4/src/app/billingCycle/billingCycle.component.html
+++ b/angular4/src/app/billingCycle/billingCycle.component.html
@@ -4,22 +4,22 @@
     <div class="nav-tabs-custom">
         <!-- Lista que cria as tabs no topo da página -->
         <ul class="nav nav-tabs">
-            <li>
+            <li *ngIf="tabList">
                 <a href data-target="#tabList" data-toggle="tab">
                     <i class="fa fa0-bars"></i> Lista
                 </a>
             </li>
-            <li>
+            <li *ngIf="tabCreate">
                 <a href data-target="#tabCreate" data-toggle="tab">
                     <i class="fa fa0-plus"></i> Incluir
                 </a>
             </li>
-            <li>
+            <li *ngIf="tabUpdate">
                 <a href data-target="#tabUpdate" data-toggle="tab">
                     <i class="fa fa0-pencil"></i> Alterar
                 </a>
             </li>
-            <li>
+            <li *ngIf="tabDelete">
                 <a href data-target="#tabDelete" data-toggle="tab">
                     <i class="fa fa0-trash-o"></i> Excluir
                 </a>
@@ -28,16 +28,16 @@
         
         <!-- Conteúdo das tabs -->
         <div class="tab-content">
-            <div class="tab-pane" id="tabList">
+            <div class="tab-pane" id="tabList" *ngIf="tabList">
                 <bc-list></bc-list>
             </div>
-            <div class="tab-pane" id="tabCreate">
+            <div class="tab-pane" id="tabCreate" *ngIf="tabCreate">
                 <bc-form></bc-form>
             </div>
-            <div class="tab-pane" id="tabUpdate">
+            <div class="tab-pane" id="tabUpdate" *ngIf="tabUpdate">
                 <bc-form></bc-form>
             </div>
-            <div class="tab-pane" id="tabDelete">
+            <div class="tab-pane" id="tabDelete" *ngIf="tabDelete">
                 <bc-form></bc-form>
             </div>
         </div>
